examples/kraken-example/public/templates/errors/http_404.int
from errors import render
render(404, url, err)
